# claude-workspaces

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.claude/: settings.json
.github/workflows/: test.yml
chrome-extension/: README.md  background.js  content.js  manifest.json
docs/: DEVELOPMENT.md  DISTRIBUTION.md  MAINTAINABILITY.md  PLUGIN_SPEC.md  USAGE.md  runners-spec.md
docs/announcements/: README.md  cachyos-discord-en.md  cachyos-forum-en.md  cachyos-reddit-en.md
examples/claude-code-hooks/session-timer/: README.md  elapsed.sh  end.sh  start.sh
examples/plugins/commit-coach/: README.md  plugin.yaml
examples/plugins/focus-timer/: README.md  plugin.yaml
examples/plugins/idle-rescue/: README.md  plugin.yaml
examples/plugins/sessao-watcher/: README.md  plugin.yaml
examples/plugins/workspace-snapshot/: README.md  plugin.yaml
packaging/: claude-workspaces.service  install-launcher.sh  install-systemd.sh  notify-hook.py  uninstall-launcher.sh
packaging/aur/: .SRCINFO  PKGBUILD  README.md  claude-workspaces.desktop  claude-workspaces.install
skills/: README.md
skills/abrir-pr/: SKILL.md
skills/commit-arquivo/: SKILL.md
skills/criar-tag-map/: SKILL.md
skills/criar-worktree/: SKILL.md
skills/gerar-release-map/: SKILL.md
skills/merge-branch-map/: SKILL.md
skills/merge-branch-ogpms/: SKILL.md
skills/notificar-discord/: SKILL.md
skills/orval-app/: SKILL.md
skills/orval-web/: SKILL.md
skills/restaurar-banco/: SKILL.md
skills/rodar-runner/: SKILL.md  resolve_runners.py
skills/trocar-banco/: SKILL.md
src/claude_workspaces/: __init__.py  app.py  backend_probe.py  briefing_builder.py  claude_activity.py  claude_probe.py  claude_sessions.py  errors.py  git_actions.py  git_status.py  git_worktree.py  hook_manager.py  launchers.py  logging_setup.py  logging_utils.py  mcp_manager.py  models.py  opencode_sessions.py  perf.py  plan_files.py  plan_usage_api.py  plan_usage_poller.py  plugin_api.py  pr_actions.py  pr_draft.py  pr_provider.py  pr_status_poller.py  process_monitor.py  pty_session.py  repo_status_poller.py  runners_io.py  session_marks.py  session_persistence.py  sessions_search.py  settings.py  skills_discovery.py  skills_lint.py  skills_telemetry.py  stacks.py  storage.py  (+3 more)
src/claude_workspaces/notifications/: __init__.py  center.py  desktop.py  discord.py  discord_summary.py  persistence.py  service.py  store.py  thresholds.py  tray.py  types.py
src/claude_workspaces/plugins/: __init__.py  bundle_validator.py  config_store.py  errors.py  events.py  manifest.py  manifest_loader.py  registry.py  runtime.py  semver.py  static_analyzer.py  storage.py
src/claude_workspaces/services/: __init__.py  changelog.py  console_hub.py  desktop_notifier.py  hooks_inspector.py  launch_planner.py  mcp_inspector.py  mcp_lean.py  mcp_scope.py  plugin_host.py  port_alloc.py  project_icon.py  quick_open.py  runner_expand.py  runner_gen_history.py  runner_prompt.py  runner_url_detect.py  served_proc.py  session_export.py  skills_install.py  state_server.py  system_open.py  worktree_bootstrap.py
src/claude_workspaces/ui/: activity_bar.py  branch_picker_dialog.py  changes_dialog.py  collapsible_panel.py  console_runners_dialog.py  diff_viewer_dialog.py  diff_web_view.py  dock_manager.py  editor_tab.py  file_finder.py  (+59 more)
tests/: conftest.py  test_backend_probe.py  test_briefing_builder.py  test_changelog.py  test_claude_activity.py  test_claude_activity_helpers.py  test_claude_probe.py  test_claude_sessions.py  test_desktop_notifier_adapter.py  test_discord_summary.py  test_git_actions.py  test_git_status.py  test_git_worktree.py  test_hook_manager.py  test_hooks_inspector.py  test_launch_claude_dialog.py  test_launch_planner.py  test_launchers.py  test_logging_utils.py  test_main_window_integration.py  test_mcp_inspector.py  test_mcp_manager.py  test_models.py  test_notification_thresholds.py  test_notifications.py  test_opencode_sessions.py  test_plan_files.py  test_pr_actions.py  test_pr_draft.py  test_pr_provider.py  test_process_monitor.py  test_project_icon.py  test_pty_session.py  test_quick_open.py  test_repo_status_poller.py  test_runner_child_widget.py  test_runner_edit_dialog.py  test_runner_gen_history.py  test_runner_ports.py  test_runner_prompt.py  (+33 more)
tests/plugins/: conftest.py  test_bundle_validator.py  test_config_store.py  test_events.py  test_fs_http_enforcement.py  test_manifest.py  test_manifest_loader.py  test_plugin_host.py  test_runtime.py  test_runtime_timeout.py  test_semver.py  test_static_analyzer.py  test_storage.py
(+40 files in other folders)
