[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-workspaces"
version = "0.1.0"
description = "Workspace manager for launching Claude Code with per-project context"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Italo Alan", email = "italoalanw3@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
claude-workspaces = "claude_workspaces.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_workspaces = ["ui/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
