[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-workspaces"
version = "0.77.0"
description = "Workspace manager for launching Claude Code with per-project context"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Italo Alan", email = "italoalanw3@gmail.com" }]
license = { text = "MIT" }
dependencies = [
    "PySide6>=6.6",
    "PySide6-QtAds>=4.4",
    "qtawesome>=1.3",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
    "pytest-cov>=4",
    "pytest-qt>=4.4",
    "ruff>=0.6",
    "mypy>=1.10",
]

[project.scripts]
claude-workspaces = "claude_workspaces.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
claude_workspaces = ["ui/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # warnings
    "I",   # isort (import order)
    "UP",  # pyupgrade (modern syntax)
    "B",   # bugbear (cuidado: B008 — defaults mutáveis)
]
ignore = [
    "E501",  # line too long — Qt CSS strings violam constantemente
    "E731",  # lambda atribuído — usamos pra slots de signals
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["F841"]  # variáveis não-usadas em testes (às vezes só pra setup)

[tool.mypy]
# Mypy roda em modo permissivo (não bloqueia merge) — pega regressões
# óbvias mas não exige anotação completa. Aumentar `strict` aos poucos
# conforme módulos forem migrando.
python_version = "3.11"
files = ["src/claude_workspaces"]
ignore_missing_imports = true
warn_unused_ignores = true
warn_redundant_casts = true
check_untyped_defs = false
disallow_untyped_defs = false
show_error_codes = true
# Plugins / UI views são notoriamente dinâmicos; exclui pra evitar ruído.
exclude = "src/claude_workspaces/plugins/.*"

[tool.coverage.run]
source = ["src/claude_workspaces"]
branch = true
omit = [
    # UI/Qt sem testes ainda; coverage só do código puro.
    "src/claude_workspaces/ui/static/*",
    "src/claude_workspaces/__main__.py",
    "src/claude_workspaces/app.py",
]

[tool.coverage.report]
skip_empty = true
fail_under = 40
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
